[package]
name = "ui_dataviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
image = "0.25.2"
ndarray = "0.15"
opencv = "0.93.1"
rerun = { version = "0.18.2", features = ["web_viewer"] }

[[bin]]
name = "read-video"
path = "src/bin/read_video.rs" 
